--- a/index.html
+++ b/index.html
@@ -22,83 +22,94 @@
   </header>
 
   <main>
+    <div class="container">
 
-    <section class="section cards">
-
-      <div class="card pequeno">
-        <div class="card-image">
-          <img src="https://via.placeholder.com/250x180.png?text=Projeto+1" alt="Projeto 1">
-          <div class="overlay">
-            <p>Projeto 1</p>
-            <a href="https://github.com/seu-usuario/projeto1" target="_blank">Ver no GitHub</a>
+      <section class="cards-container">
+        <div class="card-box">
+          <div class="card pequeno">
+            <div class="card-image">
+              <img src="https://via.placeholder.com/250x180.png?text=Projeto+1" alt="Projeto 1">
+              <div class="overlay">
+                <p>Projeto 1</p>
+                <a href="https://github.com/seu-usuario/projeto1" target="_blank">Ver no GitHub</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card pequeno">
-        <div class="card-image">
-          <img src="https://via.placeholder.com/250x180.png?text=Projeto+2" alt="Projeto 2">
-          <div class="overlay">
-            <p>Projeto 2</p>
-            <a href="https://github.com/seu-usuario/projeto2" target="_blank">Ver no GitHub</a>
+        <div class="card-box">
+          <div class="card pequeno">
+            <div class="card-image">
+              <img src="https://via.placeholder.com/250x180.png?text=Projeto+2" alt="Projeto 2">
+              <div class="overlay">
+                <p>Projeto 2</p>
+                <a href="https://github.com/seu-usuario/projeto2" target="_blank">Ver no GitHub</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card medio">
-        <div class="card-image">
-          <img src="https://via.placeholder.com/320x220.png?text=Projeto+3" alt="Projeto 3">
-          <div class="overlay">
-            <p>Projeto 3</p>
-            <a href="https://github.com/seu-usuario/projeto3" target="_blank">Ver no GitHub</a>
+        <div class="card-box">
+          <div class="card medio">
+            <div class="card-image">
+              <img src="https://via.placeholder.com/320x220.png?text=Projeto+3" alt="Projeto 3">
+              <div class="overlay">
+                <p>Projeto 3</p>
+                <a href="https://github.com/seu-usuario/projeto3" target="_blank">Ver no GitHub</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card medio">
-        <div class="card-image">
-          <img src="https://via.placeholder.com/320x220.png?text=Projeto+4" alt="Projeto 4">
-          <div class="overlay">
-            <p>Projeto 4</p>
-            <a href="https://github.com/seu-usuario/projeto4" target="_blank">Ver no GitHub</a>
+        <div class="card-box">
+          <div class="card medio">
+            <div class="card-image">
+              <img src="https://via.placeholder.com/320x220.png?text=Projeto+4" alt="Projeto 4">
+              <div class="overlay">
+                <p>Projeto 4</p>
+                <a href="https://github.com/seu-usuario/projeto4" target="_blank">Ver no GitHub</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card grande">
-        <div class="card-image">
-          <img src="https://via.placeholder.com/400x260.png?text=Projeto+5" alt="Projeto 5">
-          <div class="overlay">
-            <p>Projeto 5</p>
-            <a href="https://github.com/seu-usuario/projeto5" target="_blank">Ver no GitHub</a>
+        <div class="card-box">
+          <div class="card grande">
+            <div class="card-image">
+              <img src="https://via.placeholder.com/400x260.png?text=Projeto+5" alt="Projeto 5">
+              <div class="overlay">
+                <p>Projeto 5</p>
+                <a href="https://github.com/seu-usuario/projeto5" target="_blank">Ver no GitHub</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="card grande">
-        <div class="card-image">
-          <img src="https://via.placeholder.com/400x260.png?text=Projeto+6" alt="Projeto 6">
-          <div class="overlay">
-            <p>Projeto 6</p>
-            <a href="https://github.com/seu-usuario/projeto6" target="_blank">Ver no GitHub</a>
+        <div class="card-box">
+          <div class="card grande">
+            <div class="card-image">
+              <img src="https://via.placeholder.com/400x260.png?text=Projeto+6" alt="Projeto 6">
+              <div class="overlay">
+                <p>Projeto 6</p>
+                <a href="https://github.com/seu-usuario/projeto6" target="_blank">Ver no GitHub</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
 
-    </section>
+      <section class="aside-container">
+        <aside class="aside">
+          <h3>Currículo</h3>
+          <p>Neste currículo, você vai encontrar mais informações sobre formação, contato, etc.</p>
+        </aside>
 
-    <section class="section asides">
-      <aside class="aside">
-        <h3>Currículo</h3>
-        <p>Neste currículo, você vai encontrar mais informações sobre formação, contato, etc.</p>
-      </aside>
-
-      <aside class="aside">
-        <h3>Clique aqui para saber mais:</h3>
-        <a href="curriculo.pdf" download>Baixar Currículo</a>
-      </aside>
-    </section>
-
+        <aside class="aside">
+          <h3>Clique aqui para saber mais:</h3>
+          <a href="curriculo.pdf" download>Baixar Currículo</a>
+        </aside>
+      </section>
+    </div>
   </main>
 
   <footer class="footer">
