--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="header" id="inicio">
     <div class="header-content">
-      <img src="fotoperfil.png"  alt="Foto de Perfil" class="foto-perfil" />
+      <img src="assets/fotoperfil.png"  alt="Foto de Perfil" class="foto-perfil" />
       <div class="introducao">
         <h1>Adriani Santos Monteiro</h1>
         <p>Este é meu portfólio web, onde se encontram meus projetos, além de informações de contato e currículo.</p>
@@ -32,7 +32,7 @@
         <div class="card-box">
           <div class="card pequeno">
             <div class="card-image">
-              <img src="htmlcsslogopeq.png" alt="Projeto 1">
+              <img src="assets/htmlcsslogopeq.png" alt="Projeto 1">
               <div class="overlay">
                 <p>Primeira aula de introdução HTML, CSS</p>
                 <a href="https://github.com/Adrianiani/IntroducaoWebAula1.git">Ver no GitHub</a>
@@ -44,7 +44,7 @@
         <div class="card-box">
           <div class="card pequeno">
             <div class="card-image">
-              <img src="htmlcsslogopeq.png" alt="Projeto 2">
+              <img src="assets/htmlcsslogopeq.png" alt="Projeto 2">
               <div class="overlay">
                 <p>Criação de um portfólio web</p>
                 <a href="https://github.com/Adrianiani/portfolio-web.git">Ver no GitHub</a>
@@ -56,7 +56,7 @@
         <div class="card-box">
           <div class="card medio">
             <div class="card-image">
-              <img src="htmlcsslogomed.png" alt="Projeto 3">
+              <img src="assets/htmlcsslogomed.png" alt="Projeto 3">
               <div class="overlay">
                 <p>Criação de um currículo em HTML, CSS</p>
                 <a href="https://github.com/Adrianiani/aulacss.git">Ver no GitHub</a>
@@ -68,7 +68,7 @@
         <div class="card-box">
           <div class="card medio">
             <div class="card-image">
-              <img src="htmlcsslogomed.png" alt="Projeto 4">
+              <img src="assets/htmlcsslogomed.png" alt="Projeto 4">
               <div class="overlay">
                 <p>Exercícios sobre Formulários em HTML, CSS</p>
                 <a href="#">Ver no GitHub</a>
@@ -80,7 +80,7 @@
         <div class="card-box">
           <div class="card grande">
             <div class="card-image">
-              <img src="htmlcsslogobig.png" alt="Projeto 5">
+              <img src="assets/htmlcsslogobig.png" alt="Projeto 5">
               <div class="overlay">
                 <p>Exercícios sobre Box Model em HTML, CSS</p>
                 <a href="#">Ver no GitHub</a>
@@ -92,7 +92,7 @@
         <div class="card-box">
           <div class="card grande">
             <div class="card-image">
-              <img src="javalogobig.png" alt="Projeto 6">
+              <img src="assets/javalogobig.png" alt="Projeto 6">
               <div class="overlay">
                 <p>Exercícios sobre métodos em Java</p>
                 <a href="#">Ver no GitHub</a>
