--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="header" id="inicio">
     <div class="header-content">
-      <img src="assets/fotoperfil.png"  alt="Foto de Perfil" class="foto-perfil" />
+      <img src="assets/fotoperfil.png" alt="Foto de Perfil" class="foto-perfil" />
       <div class="introducao">
         <h1>Adriani Santos Monteiro</h1>
         <p>Este é meu portfólio web, onde se encontram meus projetos, além de informações de contato e currículo.</p>
@@ -32,10 +32,10 @@
         <div class="card-box">
           <div class="card pequeno">
             <div class="card-image">
-              <img src="assets/htmlcsslogopeq.png" alt="Projeto 1">
+              <img src="assets/htmlcsslogo.png" alt="Projeto 1" class="projeto-img" />
               <div class="overlay">
                 <p>Primeira aula de introdução HTML, CSS</p>
-                <a href="https://github.com/Adrianiani/IntroducaoWebAula1.git">Ver no GitHub</a>
+                <a href="https://github.com/Adrianiani/IntroducaoWebAula1.git">Ver  no GitHub</a>
               </div>
             </div>
           </div>
@@ -44,10 +44,10 @@
         <div class="card-box">
           <div class="card pequeno">
             <div class="card-image">
-              <img src="assets/htmlcsslogopeq.png" alt="Projeto 2">
+              <img src="assets/htmlcsslogo.png" alt="Projeto 2" class="projeto-img" />
               <div class="overlay">
                 <p>Criação de um portfólio web</p>
-                <a href="https://github.com/Adrianiani/portfolio-web.git">Ver no GitHub</a>
+                <a href="https://github.com/Adrianiani/portfolio-web.git">Ver  no GitHub</a>
               </div>
             </div>
           </div>
@@ -56,10 +56,10 @@
         <div class="card-box">
           <div class="card medio">
             <div class="card-image">
-              <img src="assets/htmlcsslogomed.png" alt="Projeto 3">
+              <img src="assets/htmlcsslogo.png" alt="Projeto 3" class="projeto-img" />
               <div class="overlay">
                 <p>Criação de um currículo em HTML, CSS</p>
-                <a href="https://github.com/Adrianiani/aulacss.git">Ver no GitHub</a>
+                <a href="https://github.com/Adrianiani/aulacss.git">Ver  no GitHub</a>
               </div>
             </div>
           </div>
@@ -68,10 +68,10 @@
         <div class="card-box">
           <div class="card medio">
             <div class="card-image">
-              <img src="assets/htmlcsslogomed.png" alt="Projeto 4">
+              <img src="assets/htmlcsslogo.png" alt="Projeto 4" class="projeto-img" />
               <div class="overlay">
                 <p>Exercícios sobre Formulários em HTML, CSS</p>
-                <a href="#">Ver no GitHub</a>
+                <a href="https://github.com/Adrianiani/formularios-html-css.git">Ver no GitHub</a>
               </div>
             </div>
           </div>
@@ -80,10 +80,10 @@
         <div class="card-box">
           <div class="card grande">
             <div class="card-image">
-              <img src="assets/htmlcsslogobig.png" alt="Projeto 5">
+              <img src="assets/htmlcsslogo.png" alt="Projeto 5" class="projeto-img" />
               <div class="overlay">
                 <p>Exercícios sobre Box Model em HTML, CSS</p>
-                <a href="#">Ver no GitHub</a>
+                <a href="https://github.com/Adrianiani/listaexercicios.git">Ver no GitHub</a>
               </div>
             </div>
           </div>
@@ -92,10 +92,10 @@
         <div class="card-box">
           <div class="card grande">
             <div class="card-image">
-              <img src="assets/javalogobig.png" alt="Projeto 6">
+              <img src="assets/javalogo.png" alt="Projeto 6" class="projeto-img" />
               <div class="overlay">
                 <p>Exercícios sobre métodos em Java</p>
-                <a href="#">Ver no GitHub</a>
+                <a href="https://github.com/Adrianiani/exercicioslogicajava.git">Ver no GitHub</a>
               </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
         </aside>
         <aside class="aside">
           <h3>Clique aqui para saber mais:</h3>
-          <a href="curriculo.pdf" download class="botao-link">Baixar Currículo</a>
+          <a href="https://docs.google.com/document/d/1TwX1c5ScgztzqUY8oFkvO-Y493D6ezTCbt8iZAbmenc/edit?usp=sharing" class="botao-link">Acessar Currículo</a>
         </aside>
       </section>
     </div>
@@ -119,15 +119,15 @@
   <footer id="contato" class="footer">
     <div class="contato">
       <i class="fas fa-envelope"></i>
-      <p>monteiroadriani@gmail.com</p>
+      <a href="mailto:monteiroadriani@gmail.com" class="contato-link">monteiroadriani@gmail.com</a>
     </div>
     <div class="redes-sociais">
       <a href="https://github.com/Adrianiani"  target="_blank" class="botao-link">
         <i class="fab fa-github"></i><span>Github</span>
       </a>
-      <div class="instagram">
+      <a href="https://instagram.com/ani.smksks"  target="_blank" class="botao-link">
         <i class="fab fa-instagram"></i><span>@ani.smksks</span>
-      </div>
+      </a>
     </div>
     <p>&copy; 2025 Adriani Santos Monteiro. Todos os direitos reservados.</p>
   </footer>
